--- a/src/Test/Bundle/CompanyBundle/Resources/views/Homepage/list.html.twig
+++ b/src/Test/Bundle/CompanyBundle/Resources/views/Homepage/list.html.twig
@@ -11,7 +11,7 @@
 {% for company in companies %}
     <div>
         <h2>
-            <a href='{{ url('test_company_list', { 'companyId': company.idCompany }) }}'>{{ company.title }}</a>
+            <a href='{{ url('test_office_list', { 'companyId': company.idCompany }) }}'>{{ company.title }}</a>
             <a href='{{ url('test_company_delete', { 'companyId': company.idCompany }) }}'>remove</a>
         </h2>
     </div>
