one direction association entities

--- a/src/Test/Bundle/CompanyBundle/Resources/views/Form/basic.html.twig
+++ b/src/Test/Bundle/CompanyBundle/Resources/views/Form/basic.html.twig
@@ -1,3 +1,7 @@
-<div>
-    {{ form(form) }}
-</div>
+{% extends "TestCompanyBundle::layout.html.twig" %}
+
+{% block body %}
+    <div>
+        {{ form(form) }}
+    </div>
+{% endblock %}
