--- a/src/Test/Bundle/CompanyBundle/Resources/views/Homepage/list.html.twig
+++ b/src/Test/Bundle/CompanyBundle/Resources/views/Homepage/list.html.twig
@@ -1,3 +1,5 @@
+{% extends "TestCompanyBundle::layout.html.twig" %}
+{% block content %}
 {% if is_granted('IS_AUTHENTICATED_FULLY') %}
 <div>
     <a href="{{ url('test_company_create') }}">register new company</a>
@@ -16,7 +18,7 @@
 
 {{ form(form) }}<br><br>
 
-{% for company in companies %}
+{% for company in companies %}{#
     <div style="border: 1px solid gray; max-width: 600px;">
         <div style="background-color: #ccc;">
         <a style=" font-size: 30px;" href='{{ url('test_office_list', { 'companyId': company.idCompany }) }}'>{{ company.title }}</a>
@@ -44,5 +46,6 @@
         {% endfor %}
         </div>
     {% endfor %}
-    </div>
+    </div>#}
 {% endfor %}
+{% endblock %}
