--- a/src/Test/Bundle/CompanyBundle/Resources/views/Office/detail.html.twig
+++ b/src/Test/Bundle/CompanyBundle/Resources/views/Office/detail.html.twig
@@ -1,3 +1,10 @@
+{% extends "TestCompanyBundle::layout.html.twig" %}
+{% block content %}
+
+
+
+
+
 <h2>{{ office.idCompany.title }}</h2>
 <h3>{{ office.address }}</h3>
 
@@ -24,3 +31,4 @@
         {% endfor %}
     </table>
 </div>
+    {% endblock %}
