--- a/src/Test/Bundle/CompanyBundle/Resources/views/Homepage/list.html.twig
+++ b/src/Test/Bundle/CompanyBundle/Resources/views/Homepage/list.html.twig
@@ -18,7 +18,7 @@
 
 {{ form(form) }}<br><br>
 
-{% for company in companies %}{#
+{% for company in companies %}
     <div style="border: 1px solid gray; max-width: 600px;">
         <div style="background-color: #ccc;">
         <a style=" font-size: 30px;" href='{{ url('test_office_list', { 'companyId': company.idCompany }) }}'>{{ company.title }}</a>
@@ -46,6 +46,6 @@
         {% endfor %}
         </div>
     {% endfor %}
-    </div>#}
+    </div>
 {% endfor %}
 {% endblock %}
