--- a/src/Test/Bundle/CompanyBundle/Resources/views/Office/detail.html.twig
+++ b/src/Test/Bundle/CompanyBundle/Resources/views/Office/detail.html.twig
@@ -5,7 +5,7 @@
 
 
 
-<h2>{{ office.idCompany.title }}</h2>
+<h2>{#{ office.idCompany.title }#}</h2>
 <h3>{{ office.address }}</h3>
 
 {% if is_granted('IS_AUTHENTICATED_FULLY') %}
