--- a/src/Test/Bundle/CompanyBundle/Resources/views/layout.html.twig
+++ b/src/Test/Bundle/CompanyBundle/Resources/views/layout.html.twig
@@ -1,16 +1,9 @@
 <html>
-    <head></head>
+    <head>
+    </head>
     <body>
-{% block content %}
-
-
-
-
-{% endblock %}
-
-
+        <link rel="stylesheet" type="text/css" href="{{ asset('bundles/testcompany/css/main.css') }}" />
+        {% block content %}
+        {% endblock %}
     </body>
-
-
-
 </html>
