--- a/src/Test/Bundle/CompanyBundle/Resources/views/Button/action_buttons.html.twig
+++ b/src/Test/Bundle/CompanyBundle/Resources/views/Button/action_buttons.html.twig
@@ -2,14 +2,14 @@
     and (itemAuthor == app.user.id or is_granted("ROLE_ADMIN")) %}
 
     
-    <a href="{{ url(routeAction ~ '_edit', { 'itemId':itemId }) }}">EDIT</a>
+    <a href="{{ url(routeAction ~ '_edit', { 'itemId':itemId }) }}">{{ 'edit'|trans|upper }}</a>
     
     {% if itemActive %}
-        <a href="{{ url(routeAction ~ '_delete', { 'itemId':itemId }) }}">DELETE</a>
+        <a href="{{ url(routeAction ~ '_delete', { 'itemId':itemId }) }}">{{ 'delete'|trans|upper }}</a>
     {% endif %}
     
     {% if is_granted("ROLE_ADMIN") and not itemActive %}
-        <a href="{{ url(routeAction ~ '_delete', { 'itemId':itemId, 'undelete':1 }) }}">UNDELETE</a>
+        <a href="{{ url(routeAction ~ '_delete', { 'itemId':itemId, 'undelete':1 }) }}">{{ 'undelete'|trans|upper }}</a>
     {% endif %}
     
 {% endif %}
